--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,106 @@
-.App {
+.Title {
+  display: flex;
+  text-align: left;
+  background: white;
+  color: rgb(49, 49, 49);
+  font-size: 36px;
+  padding: 2rem;
+  font-weight: 900;
+}
+
+.Body {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #492b56;
+  min-height: 80em;
+}
+
+.Bodyed {
+  height: 100vh;
+  background: #2c1c3e;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px -5px 0px 0px rgba(78, 0, 167, 0.274);
+}
+
+.BG {
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.MySelf {
+  margin-Top: 250px;
+  align-self: center;
+  height: 80vh;
+  width: 80vh;
+  border-radius: 40vh;
+  background-color: white;
+  flex-direction: column;
+  box-shadow: 0px 0px 0px 10px #2c1c3e;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.MyselfContent {
+  padding: 2rem;
+  flex-direction: column;
   text-align: center;
+}
+.MyName {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: rgb(49, 49, 49);
+  font-size: 45px;
+  font-weight: 700;
+}
+
+.PhoneNumber {
+  color: rgb(32, 32, 32);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.Input {
+  margin-bottom: 20px;
+}
+
+.SNS {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 25vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  border-bottom-left-radius: 100vh;
+  border-bottom-right-radius: 100vh;
+  align-self: center;
+  background: #2c1c3e;
+}
+
+.Welcome {
+  padding-top : 40px;
+  font-size: 55px;
+  text-align: center;
+  font-weight: 700;
+  color: white;
+
+}
+
+.Contents {
+  padding-top : 150px;
+  font-size: 17px;
+  text-align: left;
+  font-weight: 200;
+  color: white;
+  padding-left: 250px;
+  padding-right: 250px;
 }
 
 .App-logo {
