--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.Total {
+  min-width: 1100px;
+}
 .Title {
   display: flex;
   text-align: left;
@@ -41,9 +44,7 @@
   background-color: white;
   flex-direction: column;
   box-shadow: 0px 0px 0px 10px #2c1c3e;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+ 
 }
 
 .MyselfContent {
