--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
 .Body {
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   background: #492b56;
   min-height: 80em;
 }
@@ -36,51 +35,50 @@
 }
 
 .MySelf {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-Top: 250px;
   align-self: center;
-  height: 80vh;
-  width: 80vh;
-  border-radius: 40vh;
-  background-color: white;
+  height: 500px;
+  width: 500px;
+  border-radius: 250px;
+  background-color: #ffffff;
   flex-direction: column;
   box-shadow: 0px 0px 0px 10px #2c1c3e;
  
 }
 
 .MyselfContent {
-  padding: 2rem;
+  justify-content: center;
   flex-direction: column;
   text-align: center;
 }
-.MyName {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  color: rgb(49, 49, 49);
-  font-size: 45px;
-  font-weight: 700;
-}
 
 .PhoneNumber {
-  color: rgb(32, 32, 32);
-  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
   font-weight: 500;
+  margin-left: 20px;
 }
 
 .Input {
+  color: white;
   margin-bottom: 20px;
+  margin-left: 25px;
 }
 
 .SNS {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
-  height: 25vh;
+  width: 500px;
+  height: 150px;
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  border-bottom-left-radius: 100vh;
-  border-bottom-right-radius: 100vh;
+  border-bottom-left-radius: 150px;
+  border-bottom-right-radius: 150px;
   align-self: center;
   background: #2c1c3e;
 }
@@ -95,7 +93,7 @@
 }
 
 .Contents {
-  padding-top : 150px;
+  padding-top : 200px;
   font-size: 17px;
   text-align: left;
   font-weight: 200;
@@ -104,7 +102,7 @@
   padding-right: 250px;
 }
 
-.App-logo {
+/*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -131,4 +129,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
