--- a/src/MyWork01.css
+++ b/src/MyWork01.css
@@ -46,12 +46,18 @@
 }
 
 .Capture {
-    width: 70%;
-    background: gray;
+    width: 65%;
+    background: rgb(255, 255, 255);
+}
+
+.Capture2 {
+    padding-left: 100px;
+    width: 65%;
+    background: rgb(255, 255, 255);
 }
 
 .Info {
-    width: 30%;
+    width: 35%;
     background: white;
 }
 .Number {
