--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,25 @@
 .Total {
-  min-width: 1100px;
+  width: 100%;
 }
 .Title {
   display: flex;
   text-align: left;
-  background: white;
+  background: rgb(255, 255, 255);
   color: rgb(49, 49, 49);
   font-size: 36px;
   padding: 2rem;
   font-weight: 900;
 }
 
+.PcImg {
+  flex: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('./images/pcImage.jpg');
+  width: 100%;
+  height: 720px;
+}
 .Body {
   flex-direction: column;
   align-items: center;
@@ -34,6 +43,23 @@
   justify-content: center;
 }
 
+.Software{
+  text-align: center;
+  padding-top: 150px;
+  margin-bottom: 10px;
+  color: #292929;
+  font-size: 50px; 
+  font-weight: 800;
+}
+
+.MyName{
+  margin-top: 10px; 
+  margin-bottom: 80px;
+  color: #292929;
+  font-size: 50px;
+  font-weight: 800;
+  text-align: center;
+}
 .MySelf {
   display: flex;
   justify-content: center;
@@ -49,12 +75,6 @@
  
 }
 
-.MyselfContent {
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-
 .PhoneNumber {
   color: rgb(255, 255, 255);
   font-size: 18px;
@@ -64,6 +84,7 @@
 
 .Input {
   color: white;
+  font-size: 15px;
   margin-bottom: 20px;
   margin-left: 25px;
 }
@@ -102,6 +123,58 @@
   padding-right: 250px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 667px) {
+  .Title {
+    justify-content: center;
+  }
+  .Contents {
+    font-size: 14px;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+  .PhoneNumber{
+    font-size: 12px;
+    font-weight: 500;
+    margin-left: 10px;
+  }
+  .Input{
+    font-size: 13px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+  }
+  .MySelf {
+    height: 300px;
+    width: 300px;
+    border-radius: 150px;
+    margin-Top: 70%;
+  }
+  .Software{
+    text-align: center;
+    padding-top: 80%;
+    margin-bottom: 5%;
+    font-size: 30px; 
+    font-weight: 800;
+  }
+  .MyName{
+    margin-top: 5%; 
+    margin-bottom: 40%;
+    font-size: 30px;
+    font-weight: 800;
+  }
+  .SNS {
+    width: 300px;
+    height: 100px;
+    border-bottom-left-radius: 150px;
+    border-bottom-right-radius: 150px;
+  }
+  .Welcome{
+    padding-top : 7%;
+    font-size: 35px;
+  }
+  .Contents {
+    padding-top : 35%;
+  }
+}
 /*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
