--- a/src/MyWork01.css
+++ b/src/MyWork01.css
@@ -1,8 +1,8 @@
 .Entire {
     display: flex;
-    background: rgba(255, 255, 255, 0.897);
+    background: rgb(255, 255, 255);
     width: 100%;
-    height: 50em;
+    margin-bottom: 10%;
     flex-direction: column;
 }
 
@@ -60,6 +60,18 @@
     width: 35%;
     background: white;
 }
+.InfoLayout {
+    padding-top: 10%;
+    padding-left: 10%; 
+    padding-Right: 20%;
+}
+
+.InfoLayout2 {
+    padding-top: 10%;
+    padding-left: 20%; 
+    padding-Right: 10%;
+}
+
 .Number {
     color: #5a00c0;
     font-size: 50px;
@@ -75,4 +87,45 @@
 
 .Tool {
     font-weight: 600;
+}
+
+.ImageSize {
+    width: 800px;
+    height: 600px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 667px) {
+    .Entire {
+        margin-bottom: 100%;
+    }
+    .MyWorksContent {
+        flex-direction: column;
+    }
+    .ImageSize {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+    .Capture{
+        width: 100%;
+    }
+    .Capture2{
+        padding-left: 0%;
+        width: 100%;
+    }
+    .Info{
+        width: 100%;
+    }
+    .InfoLayout {
+        padding-top: 10%;
+        padding-left: 5%; 
+        padding-Right: 10%;
+    }
+    .InfoLayout2 {
+        padding-top: 10%;
+        padding-left: 5%; 
+        padding-Right: 10%;
+    }
 }
